fix(QueryParameter): 수정한 코드 일부가 자동으로 수정된 것을 되돌림